[metadata]
name = reccmp
version = attr: reccmp.VERSION
description = Python recompilation tools
license = AGPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C
    Programming Language :: C++
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
packages = find:
include_package_data = True
tests_require = file:requirements-tests.txt
install_requires = file:requirements.txt

[options.packages.find]
exclude =
    reccmp.tests.*

[options.entry_points]
console_scripts =
    reccmp-datacmp = reccmp.tools.datacmp:main
    reccmp-decomplint = reccmp.tools.decomplint:main
    reccmp-roadmap = reccmp.tools.roadmap:main
    reccmp-stackcmp = reccmp.tools.stackcmp:main
    reccmp-verexp = reccmp.tools.verexp:main
    reccmp-reccmp = reccmp.reccmp.reccmp:main
    reccmp-vtable = reccmp.tools.vtable:main
